# haxball-cheat-detector

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
input-analyzer/: .gitignore  README.md  main.py  pyproject.toml  railway.json  railway.toml  requirements.txt
input-analyzer/input_analyzer/: processing.py  utils.py
src/: app.css  app.html
src/components/: Dropzone.svelte
src/lib/: gameLogic.js  index.ts  matchStore.ts
src/routes/: +layout.svelte  +page.svelte
